test/testdata/crashers/02c18143db6134169736037a308d45bfa3a11427.output
panic: runtime error: slice bounds out of range

goroutine 1 [running]:
github.com/moov-io/wire.(*validator).validateOptionFName(0xc00008a220, 0xc00009402e, 0x1, 0x0, 0x0)
	/go/src/github.com/moov-io/wire/validators.go:575 +0x359
github.com/moov-io/wire.(*OriginatorOptionF).Validate(0xc00008a1c0, 0xc000094000, 0xb5)
	/go/src/github.com/moov-io/wire/originatorOptionF.go:136 +0x12d
github.com/moov-io/wire.(*Reader).parseOriginatorOptionF(0xc00003fa70, 0x6, 0x60a801)
	/go/src/github.com/moov-io/wire/reader.go:588 +0x250
github.com/moov-io/wire.(*Reader).parseLine(0xc00003fa70, 0xc000092000, 0xb5)
	/go/src/github.com/moov-io/wire/reader.go:175 +0x10e9
github.com/moov-io/wire.(*Reader).Read(0xc00003fa70, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, ...)
	/go/src/github.com/moov-io/wire/reader.go:74 +0x138
github.com/moov-io/wire/test/fuzz-reader.Fuzz(0x7f1559424000, 0xb5, 0x200000, 0x4)
	/go/src/github.com/moov-io/wire/test/fuzz-reader/reader.go:21 +0x193
go-fuzz-dep.Main(0xc00003ff80, 0x1, 0x1)
	/tmp/go-fuzz-build187149637/goroot/src/go-fuzz-dep/main.go:36 +0x1b6
main.main()
	/tmp/go-fuzz-build187149637/gopath/src/github.com/moov-io/wire/test/fuzz-reader/go.fuzz.main/main.go:15 +0x52
exit status 2